--- a/CSS BASICS/transition.css
+++ b/CSS BASICS/transition.css
@@ -1,14 +1,32 @@
-button{
+.div1{
     width: 300px;
     height: 100px;
-    /* transform-origin: 0%,0%;
-    transition-property: width ;
+    background-color: blue;
+    opacity: 1;
+     /* transform-origin: 0%,0%; */
+     display: inline-block;
+   /* transition-property: width ;
     transition-duration: 1000ms;
     transition-timing-function: ease; */
-    transition: width 2000ms ease-in;
+    /* transition: width 2000ms ease-in, opacity 5000ms ease-out,background-color 3000ms ease-in-out, */
+      transition: transform 5000ms ease-in-out
 }
 
-button:hover{
-    width: 500px;
-    /* transform: translate(50%,50%); */
+.div1:hover{
+    /* width: 500px; */
+    /* opacity: 0;
+    background-color: brown; */
+    transform: skew(-20deg)
+}
+
+.div2{
+    width: 300px;
+    height: 100px;
+    background-color: blue;
+    transition: transform 5000ms ease-in-out;
+    display: inline-block;
+}
+
+.div2:hover{
+    transform: perspective(200px) translate3d(0,0,90px) ro;
 }
